Добавлена фронтенд часть

--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -60,10 +60,7 @@
 									<label for="" class="filter-label">Сотрудники</label>
 									<div class="filter-container">
 										<div class="filter-field">
-											<span><input type="text" class="filter-input"></span>
-											<!-- <div class="filter-delete-element-input">
-												<i class="bi bi-x-circle-fill"></i>
-											</div> -->
+											<span><input type="text" class="filter-input" autocomplete="on" placeholder="поиск" ></span>
 										</div>
 										<div class="filter-clear">
 											<i class="bi bi-x-circle-fill" title="Очистить"></i>
@@ -73,16 +70,6 @@
 										<div class="window-searchcontact-container">
 											<!-- Блоки с данными -->
 											<div class="container-data">
-												<!-- Выбранные сотрудники -->
-												<div class="container-data-block">
-													<div class="container-data-head">
-														<div class="container-data-head-selector">    
-															<span>
-																<input class="form-control form-control-sm search-user-input" type="text" autocomplete="on" placeholder="поиск" aria-label="default input example" id="">
-															</span>
-														</div>
-													</div>
-												</div>
 												<!-- Отфильтрованный список пользователей -->
 												<div class="container-data-user"> </div>
 												<!-- Список сотрудников по подразделениям -->
