Добавлена фронтенд часть

--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -66,7 +66,7 @@
 											<i class="bi bi-x-circle-fill" title="Очистить"></i>
 										</div>
 									</div>
-									<div class="window-user-search">
+									<div class="d-none window-user-search">
 										<div class="window-searchcontact-container">
 											<!-- Блоки с данными -->
 											<div class="container-data">
