Добавлена фронтенд часть

--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -68,6 +68,9 @@
 									</div>
 									<div class="d-none window-user-search">
 										<div class="window-searchcontact-container">
+											<div class="filter-window-data-close">
+												<button type="button" class="btn-close" aria-label="Close"></button>
+											</div>
 											<!-- Блоки с данными -->
 											<div class="container-data">
 												<!-- Отфильтрованный список пользователей -->
@@ -85,8 +88,7 @@
 												<div class="btn-search-logo"><i class="bi bi-people-fill"></i></div>
 												<div class="btn-search-desc">Отделы</div>
 											</div>
-										</div>
-										
+										</div>									
 									</div>
 								</div>
 								<!-- Фильтр "Направления сделок" -->
