--- a/reportdpk/dpk/static/styles/_filter.sass
+++ b/reportdpk/dpk/static/styles/_filter.sass
@@ -270,6 +270,12 @@ $height-selected-item: 20px
         background: #ffffff
         z-index: 101
 
+        .filter-window-data-close
+            position: absolute
+            right: 16px
+            top: 2px
+            z-index: 99999
+
     .window-searchcontact-container .btn-search-responsible, .window-searchcontact-container .btn-search-department, .window-searchcontact-container .btn-search-invite
         position: absolute
         left: -37px
